--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,6 @@
 {
   "rewrites": [
-    {
-      "source": "/npm/:package@:version/:path*",
-      "destination": "https://cdn.jsdelivr.net/npm/:package@:version/:path*",
-      "has": [{ "type": "host", "value": "cdn.anheyu.com" }]
-    },
-    {
-      "source": "/gh/:user/:repo@:version/:path*",
-      "destination": "https://cdn.jsdelivr.net/gh/:user/:repo@:version/:path*",
-      "has": [{ "type": "host", "value": "cdn.anheyu.com" }]
-    }
-  ],
-  "edgeFunctions": {
-    "onRequest": [
-      { "src": "/npm/(.*)", "dest": "/whitelist.js" },
-      { "src": "/gh/(.*)", "dest": "/whitelist.js" }
-    ]
-  }
+    { "source": "/npm/:package@:version/:path*", "destination": "/api/proxy" },
+    { "source": "/gh/:user/:repo@:version/:path*", "destination": "/api/proxy" }
+  ]
 }
