--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "rewrites": [
     {
-      "source": "/npm/hexo-theme-anzhiyu@:version/:path",
-      "destination": "https://cdn.jsdelivr.net/npm/hexo-theme-anzhiyu@:version/:path"
+      "source": "/npm/hexo-theme-anzhiyu@:version/:path*",
+      "destination": "https://cdn.jsdelivr.net/npm/hexo-theme-anzhiyu@:version/:path*"
     },
     {
       "source": "/npm/hexo-theme-anzhiyu/:file",
