--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,16 @@
 {
   "rewrites": [
     {
-      "source": "/npm/hexo-theme-anzhiyu@:version/:path*",
-      "destination": "https://cdn.jsdelivr.net/npm/hexo-theme-anzhiyu@:version/:path*"
+      "source": "/npm/hexo-theme-anzhiyu@:version/:file*",
+      "destination": "https://cdn.jsdelivr.net/npm/hexo-theme-anzhiyu@:version/:file*"
     },
     {
-      "source": "/npm/hexo-theme-anzhiyu/:file",
-      "destination": "https://cdn.jsdelivr.net/npm/hexo-theme-anzhiyu/:file"
+      "source": "/npm/hexo-theme-anzhiyu/:file*",
+      "destination": "https://cdn.jsdelivr.net/npm/hexo-theme-anzhiyu/:file*"
     },
     {
-      "source": "/npm/hexo-theme-anzhiyu@latest/:file",
-      "destination": "https://cdn.jsdelivr.net/npm/hexo-theme-anzhiyu@latest/:file"
+      "source": "/npm/hexo-theme-anzhiyu@latest/:file*",
+      "destination": "https://cdn.jsdelivr.net/npm/hexo-theme-anzhiyu@latest/:file*"
     },
     {
       "source": "/npm/hexo-theme-anzhiyu@:version",
