--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
   "rewrites": [
     {
-      "source": "/npm/hexo-theme-anzhiyu:path*",
-      "destination": "https://cdn.jsdelivr.net/npm/hexo-theme-anzhiyu:path*"
+      "source": "/npm/hexo-theme-anzhiyu:path/*",
+      "destination": "https://cdn.jsdelivr.net/npm/hexo-theme-anzhiyu:path/*"
     },
     {
-      "source": "/npm/hexo-theme-anzhiyu:path*/",
-      "destination": "https://cdn.jsdelivr.net/npm/hexo-theme-anzhiyu:path*/"
+      "source": "/npm/hexo-theme-anzhiyu:path/*/",
+      "destination": "https://cdn.jsdelivr.net/npm/hexo-theme-anzhiyu:path/*/"
     }
   ]
 }
