--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,16 @@
 {
   "rewrites": [
     {
-      "source": "/npm/hexo-theme-anzhiyu*",
-      "destination": "https://cdn.jsdelivr.net/npm/hexo-theme-anzhiyu*"
+      "source": "/npm/hexo-theme-anzhiyu:path/*",
+      "destination": "https://cdn.jsdelivr.net/npm/hexo-theme-anzhiyu:path/*"
+    },
+    {
+      "source": "/npm/hexo-theme-anzhiyu:path/*/",
+      "destination": "https://cdn.jsdelivr.net/npm/hexo-theme-anzhiyu:path/*/"
+    },
+    {
+      "source": "/npm/hexo-theme-anzhiyu@:version/:url*",
+      "destination": "https://cdn.jsdelivr.net/npm/hexo-theme-anzhiyu@:version/:url*"
     }
   ]
 }
