--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,20 @@
 {
   "rewrites": [
     {
-      "source": "/npm/hexo-theme-anzhiyu/*",
-      "destination": "https://cdn.jsdelivr.net/npm/hexo-theme-anzhiyu:path/*"
+      "source": "/npm/hexo-theme-anzhiyu/:url*",
+      "destination": "https://cdn.jsdelivr.net/npm/hexo-theme-anzhiyu:path/:url*"
     },
     {
-      "source": "/npm/hexo-theme-anzhiyu/*/",
-      "destination": "https://cdn.jsdelivr.net/npm/hexo-theme-anzhiyu:path/*/"
+      "source": "/npm/hexo-theme-anzhiyu/:url*/",
+      "destination": "https://cdn.jsdelivr.net/npm/hexo-theme-anzhiyu:path/:url*/"
     },
     {
-      "source": "/npm/hexo-theme-anzhiyu@:version/*",
-      "destination": "https://cdn.jsdelivr.net/npm/hexo-theme-anzhiyu@:version/*"
+      "source": "/npm/hexo-theme-anzhiyu@:version/:url*",
+      "destination": "https://cdn.jsdelivr.net/npm/hexo-theme-anzhiyu@:version/:url*"
     },
     {
-      "source": "/npm/hexo-theme-anzhiyu@:version/*/",
-      "destination": "https://cdn.jsdelivr.net/npm/hexo-theme-anzhiyu@:version/*/"
+      "source": "/npm/hexo-theme-anzhiyu@:version/:url*/",
+      "destination": "https://cdn.jsdelivr.net/npm/hexo-theme-anzhiyu@:version/:url*/"
     }
   ]
 }
