--- a/vercel.json
+++ b/vercel.json
@@ -5,8 +5,8 @@
       "destination": "https://cdn.jsdelivr.net/npm/hexo-theme-anzhiyu/"
     },
     {
-      "source": "/npm/hexo-theme-anzhiyu/@:version/",
-      "destination": "https://cdn.jsdelivr.net/npm/hexo-theme-anzhiyu/@:version/"
+      "source": "/npm/hexo-theme-anzhiyu@:version/",
+      "destination": "https://cdn.jsdelivr.net/npm/hexo-theme-anzhiyu@:version/"
     },
     {
       "source": "/npm/hexo-theme-anzhiyu/:url*",
