更新匹配文件路径

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,20 @@
 {
   "rewrites": [
     {
+      "source": "/npm/:packageName@:version/:path*/",
+      "destination": "/api/proxy?packageName=:packageName&version=:version&path=:path*"
+    },
+    {
       "source": "/npm/:packageName@:version/:path*",
       "destination": "/api/proxy?packageName=:packageName&version=:version&path=:path*"
     },
     {
       "source": "/npm/:packageName@:version/",
       "destination": "/api/proxy?packageName=:packageName&version=:version"
+    },
+    {
+      "source": "/npm/:packageName/:path*/",
+      "destination": "/api/proxy?packageName=:packageName&path=:path*"
     },
     {
       "source": "/npm/:packageName/:path*",
