--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,4 @@
 {
-  "routes": [
-    {
-      "src": "/npm/(.*)",
-      "dest": "/api/proxy.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/"
-    }
-  ],
   "rewrites": [
     {
       "source": "/npm/:packageName@:version/:path*/",
@@ -33,6 +23,10 @@
     {
       "source": "/npm/:packageName/",
       "destination": "/api/proxy?packageName=:packageName"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
