--- a/vercel.json
+++ b/vercel.json
@@ -1,28 +1,28 @@
 {
   "rewrites": [
     {
-      "source": "/npm/:packageName@:version/:path*/",
-      "destination": "/api/proxy?packageName=:packageName&version=:version&path=:path*&needEnd=true"
+      "source": "/npm/:scope(@[^/]+)?/:packageName@:version/:path*/",
+      "destination": "/api/proxy?scope=:scope&packageName=:packageName&version=:version&path=:path*&needEnd=true"
     },
     {
-      "source": "/npm/:packageName@:version/:path*",
-      "destination": "/api/proxy?packageName=:packageName&version=:version&path=:path*"
+      "source": "/npm/:scope(@[^/]+)?/:packageName@:version/:path*",
+      "destination": "/api/proxy?scope=:scope&packageName=:packageName&version=:version&path=:path*"
     },
     {
-      "source": "/npm/:packageName@:version/",
-      "destination": "/api/proxy?packageName=:packageName&version=:version"
+      "source": "/npm/:scope(@[^/]+)?/:packageName@:version/",
+      "destination": "/api/proxy?scope=:scope&packageName=:packageName&version=:version"
     },
     {
-      "source": "/npm/:packageName/:path*/",
-      "destination": "/api/proxy?packageName=:packageName&path=:path*&needEnd=true"
+      "source": "/npm/:scope(@[^/]+)?/:packageName/:path*/",
+      "destination": "/api/proxy?scope=:scope&packageName=:packageName&path=:path*&needEnd=true"
     },
     {
-      "source": "/npm/:packageName/:path*",
-      "destination": "/api/proxy?packageName=:packageName&path=:path*"
+      "source": "/npm/:scope(@[^/]+)?/:packageName/:path*",
+      "destination": "/api/proxy?scope=:scope&packageName=:packageName&path=:path*"
     },
     {
-      "source": "/npm/:packageName/",
-      "destination": "/api/proxy?packageName=:packageName"
+      "source": "/npm/:scope(@[^/]+)?/:packageName/",
+      "destination": "/api/proxy?scope=:scope&packageName=:packageName"
     },
     {
       "source": "/(.*)",
