--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,27 @@
 {
   "rewrites": [
     {
-      "source": "/:scope(@[^/]+)?/:packageName@:version/:path*/",
+      "source": "/npm/:scope(@[^/]+)?/:packageName@:version/:path*/",
       "destination": "/api/proxy?scope=:scope&packageName=:packageName&version=:version&path=:path*&needEnd=true"
     },
     {
-      "source": "/:scope(@[^/]+)?/:packageName@:version/:path*",
+      "source": "/npm/:scope(@[^/]+)?/:packageName@:version/:path*",
       "destination": "/api/proxy?scope=:scope&packageName=:packageName&version=:version&path=:path*"
     },
     {
-      "source": "/:scope(@[^/]+)?/:packageName@:version/",
+      "source": "/npm/:scope(@[^/]+)?/:packageName@:version/",
       "destination": "/api/proxy?scope=:scope&packageName=:packageName&version=:version"
     },
     {
-      "source": "/:scope(@[^/]+)?/:packageName/:path*/",
+      "source": "/npm/:scope(@[^/]+)?/:packageName/:path*/",
       "destination": "/api/proxy?scope=:scope&packageName=:packageName&path=:path*&needEnd=true"
     },
     {
-      "source": "/:scope(@[^/]+)?/:packageName/:path*",
+      "source": "/npm/:scope(@[^/]+)?/:packageName/:path*",
       "destination": "/api/proxy?scope=:scope&packageName=:packageName&path=:path*"
     },
     {
-      "source": "/:scope(@[^/]+)?/:packageName/",
+      "source": "/npm/:scope(@[^/]+)?/:packageName/",
       "destination": "/api/proxy?scope=:scope&packageName=:packageName"
     },
     {
